# APP_for_seeking_oil

./: .gitignore  GUI.md  README.md  app_2.py  backend_2.py  backend_of_app.py  clear.py  first.py  main.py  neuro_3.py  neuro_app.py  pyproject.toml  test_neuro.py  tiff_to_png.py
APP_for_seekeing_oil/: backend_2.py  main.py  neuro_app.py  pyproject.toml
app/: backend_2.py  neuro_app.py
cropped_images/: subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_13.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_20.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_27.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_34.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_41.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_48.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_55.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_56.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_57.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_58.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_59.tif  subset_10_of_S1A_IW_GRDH_1SDV_20241231T152814_20241231T152839_057238_angle0_cropped_6.tif  (+23 more)
network/: dataset.py  main.py
