[project]
name = "mypythonprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal>=3.11.1",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pyqt6>=6.9.1",
    "rasterio>=1.4.3",
]

[tool.uv.sources]
gdal = { path = "gdal-3.11.1-cp313-cp313-win_amd64.whl" }
